# purple-coding-agent

./: Dockerfile  README.md  amber-manifest.json5  docker-compose.yml  mcts.py  pyproject.toml  requirements.txt  server.py
docker/: compose_generator.py
scripts/: grpo_train.py  kaggle_notebook.py  mine_trajectories.py  start_vllm.sh
src/: agent.py  llm_client.py  prm.py  prompts.py  server.py  state.py
tests/: test_agent.py
