[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purple-agent"
version = "1.0.0"
description = "MCTS-guided purple coding agent for SWE-bench / AgentBeats"
requires-python = ">=3.10"
dependencies = [
    # API server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # HTTP client
    "requests>=2.31",
    # ML inference (served externally via vLLM)
    "huggingface-hub>=0.23",
    # Optional: direct inference fallback
    "transformers>=4.41",
    "accelerate>=0.30",
    "torch>=2.3",
]

[project.optional-dependencies]
train = [
    # GRPO training (Week 2)
    "unsloth[colab-new]",
    "trl>=0.9",
    "datasets>=2.19",
    "peft>=0.11",
    "bitsandbytes>=0.43",
]
vllm = [
    "vllm>=0.5",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
